fix(Select): fix alignment of select and input
ISSUES CLOSED: #608

--- a/terminus-ui/src/scss/helpers/_typography.scss
+++ b/terminus-ui/src/scss/helpers/_typography.scss
@@ -192,7 +192,9 @@ $typography-body-levels: (
       // Don't apply custom line-height to buttons
       &:not(.c-button) {
         &:not(.c-input) {
-          line-height: 20px;
+          &:not(.c-select) {
+            line-height: 20px;
+          }
         }
       }
     }
